set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_STANDARD 17)

# 测试程序的路径
set(INCROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(SRCROOT ${CMAKE_CURRENT_SOURCE_DIR})

include_directories(${INCROOT})

file(GLOB IMHUI_FILES_HEADER "${INCROOT}/*.h")
file(GLOB IMHUI_FILES_SOURCE "${SRCROOT}/*.cpp")

add_library(imgui STATIC ${IMGUI_HEADER_FILES} ${IMHUI_FILES_SOURCE})
